# gritql-mcp

./: .gitignore  README.md  example-config.json  package-lock.json  package.json  pyproject.toml  test-sample.js
scripts/: run-stdio.sh
server/: main.py  mcp_instance.py
server/handlers/: apply.py  dry_run.py  find.py  generate.py  library.py
server/parsing/: grit_cli.py
server/policy/: gating.py
src/: index.ts
tests/: test_gating.py  test_handlers.py  test_mcp_host.py
